12-helm.tf
provider "helm" {
  kubernetes {
    host                   = aws_eks_cluster.devlink.endpoint
    cluster_ca_certificate = base64decode(aws_eks_cluster.devlink.certificate_authority[0].data)
    exec {
      api_version = "client.authentication.k8s.io/v1beta1"
      args        = ["eks", "get-token", "--cluster-name", aws_eks_cluster.devlink.id]
      command     = "aws"
    }
  }
}
//AWS Load Balancer Controller
resource "helm_release" "aws-load-balancer-controller" {
  name = "aws-load-balancer-controller"

  repository = "https://aws.github.io/eks-charts"
  chart      = "aws-load-balancer-controller"
  namespace  = "kube-system"
  version    = "1.4.4"

  set {
    name  = "clusterName"
    value = aws_eks_cluster.devlink.id
  }

  set {
    name  = "image.tag"
    value = "v2.4.2"
  }

  set {
    name  = "serviceAccount.name"
    value = "aws-load-balancer-controller"
  }

  set {
    name  = "serviceAccount.annotations.eks\\.amazonaws\\.com/role-arn"
    value = aws_iam_role.aws_load_balancer_controller.arn
  }

  depends_on = [
    aws_eks_node_group.private-nodes,
    aws_iam_role_policy_attachment.aws_load_balancer_controller_attach
  ]
}
//Metrics Server
resource "helm_release" "metrics_server" {
  namespace        = "kube-system"
  name             = "metrics-server"
  chart            = "metrics-server"
  version          = "3.8.2"
  repository       = "https://kubernetes-sigs.github.io/metrics-server/"
  create_namespace = true
  set {
    name  = "replicas"
    value = "1"
  }
}

## create argocd napesace
provider "kubernetes" {
  config_path = "~/.kube/config"
}
resource "kubernetes_namespace" "argocd" {  
  metadata {
    name = "argocd"
  }
}

resource "helm_release" "argocd-staging" {
  name       = "argocd-staging"
  chart      = "argo-cd"
  repository = "https://argoproj.github.io/argo-helm"
  version    = "5.27.3"
  namespace  = "argocd"
  timeout    = "1200"
  values     = [templatefile("./argocd/install.yaml", {})]
}

resource "null_resource" "password" {
  provisioner "local-exec" {
    working_dir = "./argocd"
    command     = "kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath={.data.password} | base64 -d > argocd-login.txt"
  }
}

## delete argo-cd password
##resource "null_resource" "del-argo-pass" {
##  depends_on = [null_resource.password]
##  provisioner "local-exec" {
##    command = "kubectl -n argocd delete secret argocd-initial-admin-secret"
##  }
##}
